--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -51,6 +51,26 @@
       },
       "problemMatcher": [],
       "type": "pause-console"
+    },
+    {
+      "type": "cppbuild",
+      "label": "C/C++: g++.exe 生成活动文件",
+      "command": "C:\\TDM-GCC-64\\bin\\g++.exe",
+      "args": [
+        "-fdiagnostics-color=always",
+        "-g",
+        "${file}",
+        "-o",
+        "${fileDirname}\\${fileBasenameNoExtension}.exe"
+      ],
+      "options": {
+        "cwd": "${fileDirname}"
+      },
+      "problemMatcher": [
+        "$gcc"
+      ],
+      "group": "build",
+      "detail": "编译器: C:\\TDM-GCC-64\\bin\\g++.exe"
     }
   ],
   "version": "2.0.0"
