--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,37 +5,18 @@
       "args": [],
       "cwd": "${fileDirname}",
       "env": {
-        "PATH": "C:\\TDM-GCC-64\\bin;${env:PATH}"
+        "PATH": "D:\\Program Files (x86)\\Embarcadero\\Dev-Cpp\\TDM-GCC-64\\bin;${env:PATH}"
       },
       "environment": [],
       "externalConsole": true,
       "internalConsosleOptions": "neverOpen",
-      "miDebuggerPath": "C:\\TDM-GCC-64\\bin\\gdb.exe",
+      "miDebuggerPath": "D:\\Program Files (x86)\\Embarcadero\\Dev-Cpp\\TDM-GCC-64\\bin\\gdb.exe",
       "name": "single file debug",
       "preLaunchTask": "single file build",
       "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
       "request": "launch",
       "stopAtEntry": false,
       "type": "cppdbg"
-    },
-    {
-      "name": "C/C++ Runner: Debug Session",
-      "type": "cppdbg",
-      "request": "launch",
-      "args": [],
-      "stopAtEntry": false,
-      "externalConsole": true,
-      "cwd": "d:/code/c++/寒假",
-      "program": "d:/code/c++/寒假/build/Debug/outDebug",
-      "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ]
     }
   ],
   "version": "0.2.0"
